load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/thpham/cortex/cmd/cli",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cmd:go_default_library"],
)

go_binary(
    name = "bin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    out = "cortex",
)

go_binary(
    name = "bin-linux",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
    out = "cortex",
)